--- a/src/montoitfleurus/theme/static/manifest.cfg
+++ b/src/montoitfleurus/theme/static/manifest.cfg
@@ -7,5 +7,10 @@ directory = overrides
 
 [theme:parameters]
 ajax_load = python: request.form.get('ajax_load', False)
+have_left_portlets = python:context and context.restrictedTraverse('@@plone').have_portlets('plone.leftcolumn',context)
+have_right_portlets = python:context and context.restrictedTraverse('@@plone').have_portlets('plone.rightcolumn',context)
+have_both_portlets = python:context and (context.restrictedTraverse('@@plone').have_portlets('plone.leftcolumn',context) and context.restrictedTraverse('@@plone').have_portlets('plone.rightcolumn',context))
 have_no_portlet = python:context and (not context.restrictedTraverse('@@plone').have_portlets('plone.leftcolumn',context) and not context.restrictedTraverse('@@plone').have_portlets('plone.rightcolumn',context))
 have_portlets = python:context and (context.restrictedTraverse('@@plone').have_portlets('plone.leftcolumn',context) or context.restrictedTraverse('@@plone').have_portlets('plone.rightcolumn',context))
+
+
