--- a/base.cfg
+++ b/base.cfg
@@ -3,6 +3,7 @@ extends = https://raw.github.com/affinitic/affinitic.dist/master/plone.cfg
 develop = .
 
 [versions]
+plone.api = 1.1.0
 plone.app.themingplugins = 1.0b1
 z3c.jbot = 0.7.1
 
