Adaptation base.cfg
Les versions  > versions.cfg //
Modification de base.cfg //
Mise en place de ploneFormGen //
Mise en place de cpatcha

--- a/base.cfg
+++ b/base.cfg
@@ -1,16 +1,29 @@
 [buildout]
-extends = https://raw.github.com/affinitic/affinitic.dist/master/plone.cfg
 develop = .
+versions = versions
+extends =
+    https://raw.github.com/affinitic/affinitic.dist/master/plone.cfg
+    http://dist.plone.org/release/4.3.2/versions.cfg
+    versions.cfg
 
-[versions]
-plone.api = 1.1.0
-plone.app.themingplugins = 1.0b1
-z3c.jbot = 0.7.1
+
+eggs +=
+    montoitfleurus.theme
+    Products.PloneFormGen
+    collective.captcha
+    
+zcml +=
+    montoitfleurus.theme
+    collective.captcha
 
 [instance]
 http-address = 8080
-eggs += montoitfleurus.theme
-zcml += montoitfleurus.theme
+eggs +=
+    ${buildout:eggs}
+    
+
+zcml +=
+    ${buildout:zcml}
 
 [test]
 eggs += montoitfleurus.theme
