--- a/base.cfg
+++ b/base.cfg
@@ -11,7 +11,8 @@ eggs +=
     montoitfleurus.theme
     Products.PloneFormGen
     collective.captcha
-    
+    collective.embedly
+
 zcml +=
     montoitfleurus.theme
     collective.captcha
@@ -20,7 +21,6 @@ zcml +=
 http-address = 8080
 eggs +=
     ${buildout:eggs}
-    
 
 zcml +=
     ${buildout:zcml}
