--- a/versions.cfg
+++ b/versions.cfg
@@ -7,4 +7,5 @@ Products.PythonField = 1.1.3
 Products.TemplateFields = 1.2.5
 Products.TALESField = 1.1.3
 collective.captcha = 1.7
+collective.embedly = 2.3
 skimpyGimpy = 1.4
