Changement nom de la skin / Portlet.css dans cssregistry / style sur le portlets liens utilies

--- a/src/montoitfleurus/theme/static/manifest.cfg
+++ b/src/montoitfleurus/theme/static/manifest.cfg
@@ -1,5 +1,5 @@
 [theme]
-title = Site pour Mon Toit Fleurusien
+title = Skin Mon Toit Fleurusien
 description = Diazo Theme from montoitfleurus.theme package
 
 [theme:overrides]
